Compiler/tests/bad/Variables/13_variable.rs
fn main()
{
  let x : i32 = 4;
  let x : &mut i32 = &mut x;
  
  return;
}
